force-app/main/default/objects/Project_Phase__c/fields/Destination_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Destination_Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Project Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipLabel>Destination Project Phases</relationshipLabel>
    <relationshipName>Project_Phases</relationshipName>
    <type>Lookup</type>
</CustomField>