force-app/main/default/objects/Project_Phase__c/fields/Number_Of_Towers__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Towers__c</fullName>
    <label>Number Of Towers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>