force-app/main/default/objects/Project_Phase__c/fields/Phase_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_End_Date__c</fullName>
    <label>Phase End Date</label>
    <type>Date</type>
</CustomField>