force-app/main/default/objects/Project_Phase__c/fields/Phase_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_Start_Date__c</fullName>
    <label>Phase Start Date</label>
    <type>Date</type>
</CustomField>