force-app/main/default/objects/Project_Phase__c/fields/Phase_Status__c.field-meta.xml
<CustomField>
    <fullName>Phase_Status__c</fullName>
    <label>Phase Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>