force-app/main/default/objects/Project_Phase__c/fields/Project_Phase_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase_Code__c</fullName>
    <displayFormat>PPH-{000000}</displayFormat>
    <label>Project Phase Code</label>
    <type>AutoNumber</type>
</CustomField>