force-app/main/default/objects/Project_Phase__c/fields/Receipt_is_Received__c.field-meta.xml
<CustomField>
    <fullName>Receipt_is_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt is Received</label>
    <type>Checkbox</type>
</CustomField>