force-app/main/default/objects/Project_Phase__c/fields/Total_Purchase_Order_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Purchase_Order_Cost__c</fullName>
    <label>Total Purchase Order Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>