force-app/main/default/objects/Project_Phase__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tower Created</label>
    <type>Checkbox</type>
</CustomField>