force-app/main/default/objects/Project_Phase__c/validationRules/Date_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_VR</fullName>
    <active>true</active>
    <errorConditionFormula>Phase_Start_Date__c  &gt;=  Phase_End_Date__c</errorConditionFormula>
    <errorMessage>Check Start Date And End Date .</errorMessage>
</ValidationRule>