force-app/main/default/objects/Project_Phase__c/listViews/Copy_of_Project_Phase_View.listView-meta.xml
<ListView>
    <fullName>Copy_of_Project_Phase_View</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Phase_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Copy of Project Phase View</label>
</ListView>